force-app/main/default/objects/objApplicationDetail__c/objApplicationDetail__c.object-meta.xml
<CustomObject>
    <label>申請明細</label>
    <nameField>
        <displayFormat>AD{000000000}</displayFormat>
        <label>管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>申請明細</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>