force-app/main/default/objects/objApplicationDetail__c/fields/ColumnName__c.field-meta.xml
<CustomField>
    <fullName>ColumnName__c</fullName>
    <formula>objApplicationTemplateDetail__r.Name</formula>
    <label>表示名</label>
    <type>Text</type>
</CustomField>