force-app/main/default/objects/objApplicationDetail__c/fields/ColumnOrder__c.field-meta.xml
<CustomField>
    <fullName>ColumnOrder__c</fullName>
    <formula>objApplicationTemplateDetail__r.ColumnOrder__c</formula>
    <label>列順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>