force-app/main/default/objects/objApplicationDetail__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <formula>TEXT(objApplicationTemplateDetail__r.DataType__c)</formula>
    <label>データ型</label>
    <type>Text</type>
</CustomField>