force-app/main/default/objects/objApplicationDetail__c/fields/LongTextArea__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea__c</fullName>
    <label>ロングテキストエリア</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>