force-app/main/default/objects/objApplicationDetail__c/fields/objApplication__c.field-meta.xml
<CustomField>
    <fullName>objApplication__c</fullName>
    <label>申請</label>
    <referenceTo>objApplication__c</referenceTo>
    <relationshipLabel>申請明細</relationshipLabel>
    <relationshipName>objApplicationDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>