force-app/main/default/objects/objApplicationDetail__c/fields/objApplicationTemplateDetail__c.field-meta.xml
<CustomField>
    <fullName>objApplicationTemplateDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請定義明細</label>
    <referenceTo>objApplicationTemplateDetail__c</referenceTo>
    <relationshipLabel>申請明細</relationshipLabel>
    <relationshipName>objApplicationDetail</relationshipName>
    <type>Lookup</type>
</CustomField>