force-app/main/default/objects/objApplicationDetail__c/fields/PageNumber__c.field-meta.xml
<CustomField>
    <fullName>PageNumber__c</fullName>
    <formula>objApplicationTemplateDetail__r.PageNumber__c</formula>
    <label>ページ順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>