force-app/main/default/objects/objApplicationDetail__c/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <formula>objApplicationTemplateDetail__r.RowNumber__c</formula>
    <label>行順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>