force-app/main/default/objects/objApplicationDetail__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <formula>objApplicationTemplateDetail__r.SortOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>表示順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>